# pybites-tools

./: .env-template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: test  test.yml
pybites_tools/: __init__.py  alarm.py  meaning.py  sendemail.py  worldclock.py  zen.py
requirements/: base.txt  dev.txt  pybites.txt
tests/: test_license.py  test_meaning.py  test_worldclock.py  test_zen.py
tests/misc/: test_zen.py
tests/strings/: test_license.py
tools/: aws.py  email.py  emails.py  zen.py
tools/misc/: zen.py
tools/strings/: license.py
