[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pybites-tools"
authors = [{name = "PyBites", email = "support@pybit.es"}]
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "requests >=2.26.0",
    "python-dotenv >=0.19.0",
    "boto3 >=1.18.36",
    "pyperclip >=1.8.2",
]

[tool.flit.module]
name = "pybites_tools"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "mypy",
    "flake8",
    "pre-commit",
]

[project.urls]
Source = "https://github.com/PyBites-Open-Source/pybites-tools"

[project.scripts]
zen = "pybites_tools.zen:main"
s3 = "pybites_tools.aws:main"
email = "pybites_tools.email:main"
